Test/dafny0/BitvectorResolution.dfy.expect
BitvectorResolution.dfy(9,13): Error: bitvector literal (5000) is too large for the type bv1
BitvectorResolution.dfy(15,9): Error: bitvector literal (1) is too large for the type bv0
BitvectorResolution.dfy(18,9): Error: bitvector literal (4294967296) is too large for the type bv32
BitvectorResolution.dfy(24,12): Error: bitvector literal (1) is too large for the type bv0
BitvectorResolution.dfy(35,6): Error: RHS (of type bv67) not assignable to LHS (of type int)
BitvectorResolution.dfy(36,6): Error: RHS (of type bv67) not assignable to LHS (of type int)
BitvectorResolution.dfy(38,6): Error: RHS (of type bv67) not assignable to LHS (of type int)
BitvectorResolution.dfy(39,6): Error: RHS (of type bv67) not assignable to LHS (of type int)
BitvectorResolution.dfy(40,15): Error: type of right argument to << (real) must be an integer-numeric or bitvector type
BitvectorResolution.dfy(41,15): Error: type of right argument to << (SmallReal) must be an integer-numeric or bitvector type
BitvectorResolution.dfy(42,26): Error: type mismatch for argument (function expects nat, got real)
BitvectorResolution.dfy(43,26): Error: type mismatch for argument (function expects nat, got SmallReal)
BitvectorResolution.dfy(110,19): Error: the type of this expression is underspecified
13 resolution/type errors detected in BitvectorResolution.dfy
